Bug #57207 --> When we bring up the progress dialog, if we've already received a on stop request, then go ahead and make the progress dialog go away again. r=sspitzer, sr=alecf